syntax = "proto3";
package data;

message Entry {
    string text = 1;
}

message State {
    uint64 currentTerm = 1;
    string votedFor = 2;
    repeated Entry log = 3;
    uint64 commitIndex = 4;
    uint64 lastApplied = 5;
    repeated uint64 nextIndex = 6;
    repeated uint64 matchIndex = 7;
}

message AppendEntryRequest {
    uint64 term = 1;
    string leaderId = 2;
    uint64 prevLogEntry = 3;
    uint64 prevLogTerm = 4;
    repeated Entry entries = 5;
    uint64 leaderCommit = 6;
}

message AppendEntryResponse {
    uint64 commitIndex = 1;
    bool   added = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    string candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}
